# Lux

./: .cdtproject  .cproject  .cvsignore  .hgeol  .hgignore  .project  AUTHORS.txt  CMakeLists.txt  Configuration.cmake  License.md  Makefile  Readme.md  exrcheck.cpp  exrinstall.txt  lux.cmake  lux.spec  luxcomp.cmake  luxconsole.cmake  luxmerger.cmake  luxrender.cmake  makeBuildNumber.py  pylux.cmake  splash.xcf
accelerators/: bruteforce.cpp  bruteforce.h  bvhaccel.cpp  bvhaccel.h  grid.cpp  grid.h  kdtree.cpp  kdtree.h  kdtreeaccel.h  qbvhaccel.cpp  qbvhaccel.h  safekdtree.cpp  safekdtreeaccel.h  sqbvhaccel.cpp  sqbvhaccel.h  tabreckdtree.cpp  tabreckdtreeaccel.h  unsafekdtree.cpp  unsafekdtreeaccel.h
cameras/: environment.cpp  environment.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h  realistic.cpp  realistic.h
cmake/: Dependencies.cmake  FindFFTW.cmake  FindFreeImage.cmake  FindFreeImage.cxx  FindOpenCL.cmake  FindOpenEXR.cmake  FindPNG.cmake  FindPkgMacros.cmake  PlatformSpecific.cmake  documentation.cmake  liblux.cmake  luxcomp.cmake  luxconsole.cmake  luxmerger.cmake  luxrecons.cmake  luxrender.cmake  macosx_bundle.cmake  pylux.cmake
console/: commandline.cpp  commandline.h  luxconsole.cpp
core/: .cvsignore  CImg.h  api.cpp  api.h  asyncstream.cpp  asyncstream.h  bsh.h  camera.cpp  camera.h  cameraresponse.cpp  cameraresponse.h  cie.cpp  cie.h  color-sse.h  color.cpp  color.h  context.cpp  context.h  contribution.cpp  contribution.h  dynload.cpp  dynload.h  epsilon.cpp  epsilon.h  error.h  exrio.cpp  exrio.h  fastmutex.h  filedata.cpp  filedata.h  film.cpp  film.h  filter.h  geometry.cpp  geometry.h  igiio.cpp  igiio.h  imagereader.cpp  imagereader.h  kdtree.h  (+80 more)
cpp_api/: dllmain.cpp  export_defs.h  lux_api.cpp  lux_api.h  lux_instance.h  lux_paramset.h  lux_wrapper_factories.cpp  unexported_symbols.map
debian/: README.Debian  changelog  control  copyright  docs  rules
doxygen/: doxygen.conf
engines/: samplerrenderer.cpp
film/: fleximage.cpp  fleximage.h  image.cpp  image.h  multiimage.cpp  multiimage.h
filters/: box.cpp  box.h  gaussian.cpp  gaussian.h  mitchell.cpp  mitchell.h  sinc.cpp  sinc.h  triangle.cpp  triangle.h
integrationsamplers/: metropolis.cpp  metropolis.h
integrators/: MultipleScatteringPathTracing.cpp  MultipleScatteringPathTracing.h  ardirectlighting.cpp  ardirectlighting.h  arpath.cpp  arpath.h  bidirectional.cpp  bidirectional.h  debug.cpp  debug.h  depthfield.cpp  depthfield.h  directlighting.cpp  directlighting.h  distributedpath.cpp  distributedpath.h  emission.cpp  emission.h  envpath.cpp  envpath.h  exphotonmap.cpp  exphotonmap.h  igi.cpp  igi.h  importancepath.cpp  importancepath.h  irradiancecache.cpp  irradiancecache.h  mltpath.cpp  mltpath.h  multi.cpp  multi.h  none.cpp  none.h  particletracing.cpp  particletracing.h  path.cpp  path.h  path2.cpp  path2.h  (+10 more)
lights/: area.cpp  defs.h  distant.cpp  distant.h  environment.cpp  environment.h  goniometric.cpp  goniometric.h  infinite.cpp  infinite.h  infinitesample.cpp  infinitesample.h  mediancut.cpp  mediancut.h  point.cpp  point.h  pointlight.cpp  pointlight.h  projection.cpp  projection.h  sky.cpp  sky.h  sky2.cpp  sky2.h  spot.cpp  spot.h  summedareatable.h  sun.cpp  sun.h  sun2.cpp  sun2.h  sun3.cpp  sun3.h
linux/: CMakeLists.txt
materials/: bluepaint.cpp  bluepaint.h  brushedmetal.cpp  brushedmetal.h  carpaint.cpp  carpaint.h  clay.cpp  clay.h  cloth.cpp  cloth.h  doubleside.cpp  doubleside.h  felt.cpp  felt.h  glass.cpp  glass.h  glass2.cpp  glass2.h  glossy.cpp  glossy.h  glossy2.cpp  glossy2.h  glossytranslucent.cpp  glossytranslucent.h  layeredmaterial.cpp  layeredmaterial.h  matte.cpp  matte.h  mattetranslucent.cpp  mattetranslucent.h  metal.cpp  metal.h  metal2.cpp  metal2.h  mirror.cpp  mirror.h  mixmaterial.cpp  mixmaterial.h  null.cpp  null.h  (+20 more)
objs/: keepdirectory.txt
pbrtattic/: README.txt
pixelsamplers/: gridpx.cpp  gridpx.h  hilbertpx.cpp  hilbertpx.h  linear.cpp  linear.h  lowdiscrepancypx.cpp  lowdiscrepancypx.h  randompx.cpp  randompx.h  tilepx.cpp  tilepx.h  vegas.cpp  vegas.h
platform/linux/: CMakeLists.txt
python/: binding.cpp  binding.h  pycontext.h  pydoc.h  pydoc_context.h  pydoc_renderserver.h  pydynload.h  pydynload_generator.py  pyfleximage.h  pyluxconsole.py  pyrenderserver.h
qtgui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.hxx  aboutdialog.ui  advancedinfowidget.cpp  advancedinfowidget.hxx  background.ui  backgroundwidget.cpp  backgroundwidget.hxx  batchprocessdialog.cpp  batchprocessdialog.hxx  colorspace.ui  colorspacewidget.cpp  colorspacewidget.hxx  gamma.ui  gammawidget.cpp  gammawidget.hxx  guiutil.cpp  guiutil.h  histogram.ui  histogramview.cpp  histogramview.hxx  histogramwidget.cpp  histogramwidget.hxx  icons.qrc  images.qrc  lenseffects.ui  lenseffectswidget.cpp  lenseffectswidget.hxx  lightgroup.ui  lightgroupwidget.cpp  lightgroupwidget.hxx  luxapp.cpp  luxapp.h  luxapp.hxx  luxrender.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hxx  (+15 more)
renderer/: icons.h  lux.cpp  lux.desktop  luxconsole.cpp  luxgui.cpp  luxgui.h  luxrender.desktop  luxwindow.h  pbrt.cpp  renderserver.cpp  renderserver.h  renderwindow.cpp  renderwindow.h  splash.h  splash.xcf  wxglviewer.cpp  wxglviewer.h  wximages.h  wxluxapp.cpp  wxluxapp.h  wxluxframe.cpp  wxluxframe.fbp  wxluxframe.h  wxluxgui.cpp  wxluxgui.h  wxviewer.cpp  wxviewer.h
renderers/: hybridrenderer.cpp  hybridrenderer.h  hybridsamplerrenderer.cpp  hybridsamplerrenderer.h  hybridsppmrenderer.cpp  hybridsppmrenderer.h  luxcorerenderer.cpp  luxcorerenderer.h  samplerrenderer.cpp  samplerrenderer.h  samplertbbrenderer.cpp  samplertbbrenderer.h  slgrenderer.cpp  slgrenderer.h  sppmrenderer.cpp  sppmrenderer.h
samplers/: bestcandidate.cpp  bestcandidate.h  erpt.cpp  erpt.h  halton.cpp  halton.h  lowdiscrepancy.cpp  lowdiscrepancy.h  metrosampler.cpp  metrosampler.h  random.cpp  random.h  sampledata.cpp  sampledata.h  sobol.cpp  sobol.h  stratified.cpp  stratified.h
server/: renderserver.cpp  renderserver.h
shapes/: barytrianglemesh.cpp  cone.cpp  cone.h  (+42 more)
(+742 files in other folders)
